welcome.lessons.welcome.array.island.Island.scala.error
island:13: error: reassignment to val
    niveau=niveau+1
          ^